fixed dashboard overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,7 @@ a {
 }
 
 .membersWidth{
-max-width: 119dvh;
+max-width: 119dvw;
 }
 
 .marginRight{
@@ -176,7 +176,8 @@ caret-color: transparent;
   padding: 32px;
   position: relative;
   /* position relative to sidebar */
-  z-index: 0
+  z-index: 0;
+  overflow: overlay;
 }
 
 
